--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-server": "^19.0.0",
     "@angular/router": "^19.0.0",
     "@angular/ssr": "^19.0.2",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "sass": "^1.83.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
